[package]
name = "sundial"
version = "0.2.0"
authors = ["Brandon Nguyen <gnuyent@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
time = "0.2"
tokio = {version = "0.2", features = ["full"]}
