[package]
name = "sundial"
version = "0.1.0"
authors = ["Brandon Nguyen <gnuyent@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "3.0.0-beta.2"
itertools = "0.10"
log = "0.4"
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.12"
serde = {version = "1.0", features = ["derive"]}
simplelog = "^0.7"
time = "0.2"
toml = "0.4"
